[gd_scene load_steps=4 format=2]

[ext_resource path="res://props/pressplate/pressplate.png" type="Texture" id=1]
[ext_resource path="res://props/pressplate/pressplate.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 2 )

[node name="Pressplate" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
offset = Vector2( 0, -2 )
region_enabled = true
region_rect = Rect2( 0, 12, 32, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
shape = SubResource( 1 )

[node name="Plate" type="RigidBody2D" parent="."]
show_behind_parent = true
collision_mask = 15
mode = 3
contacts_reported = 2
contact_monitor = true

[node name="Sprite" type="Sprite" parent="Plate"]
position = Vector2( 0, -4 )
texture = ExtResource( 1 )
offset = Vector2( 0, -3.5 )
region_enabled = true
region_rect = Rect2( 0, 5, 32, 7 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Plate"]
polygon = PoolVector2Array( -15, -4, -15, -8, -13, -10, 13, -10, 15, -8, 15, -4 )

[node name="Tween" type="Tween" parent="."]

[node name="ReleaseTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="Plate" to="." method="_on_body_entered"]
[connection signal="body_exited" from="Plate" to="." method="_on_body_exited"]
[connection signal="timeout" from="ReleaseTimer" to="." method="_on_release_timeout"]
